We add, eddit and readjust the desing of the trajectory section into the cv diego vidal page, also we add some pictures to it

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -139,15 +139,16 @@
                 a identificar tendencias y modelos en los datos eh informacion
                 y soy eficaz haciendo preguntas claves de diagnostico antes
                 de resolver un problema o conflicto.
-                
             </p>
         </div>
-        <div id="mi-trayectoria" class="trajectory">
-            <h2>Mi trayectoria </h2>
-            <h3>
-                2018-2020 Asesoria En Vanguardia Y Diseño
-                MCB del Norte.
-            </h3>
+        <div id="trajectory" class="projects-title">
+            <h2>
+                Acontinuacion puedes ver mi trayectoria:
+            </h2>
+        </div>
+        <div class="project1">
+            <h3>2018-2020 Asesoria En Vanguardia Y Diseño MCB del Norte.</h3>
+            <img src="../../images/diego-vidal/diego-vidal-givenchy.jpg" alt="picture of Diego Portfolio">
             <p>
                 Desempeño funciones de Promotor-Demostrador
                 para la marca GIVENCHY en una de las
@@ -157,22 +158,30 @@
                 desempeñar mi trabajo con compromiso y
                 responsabilidad!
             </p>
-            <h3>
-                2016-2018 Multiservicios OG del Sureste
-            </h3>
+            <a href="diegolab/rwd-projects/5-personal-portfolio.html">¡Te cuento mas aqui!</a>
+        </div>
+        <div class="project2">
+            <h3>2016-2018 Multiservicios OG del Sureste</h3>
+            <img src="../../images/diego-vidal/diego-en-escritorio.jpg">
+            <img src="../../images/diego-vidal/diego-vendiendo-santillana.jpg">
             <p>
                 realize labores como
-                <strong>Auxiliar administrativo</strong>,
+                <strong>Auxiliar administrativo - Vendedor </strong>,
                 Facturacion,
                 inventarios, Capturista de datos,
                 atencion a clientes entre otras
                 actividades genericas como especiales.
+                Multiples operaciones incluyento venta de
+                guias santillana en Escuelas Primarias
                 Linea: 993 160 2043
             </p>
-            <h3>
-                2014-2016 La norteña Grill, Suc. Galerias,
-                Altabrisa y sendero.
+            <a href="product-landing-page/index.html" target="_blank">¡Te cuento mas aqui!</a>
+        </div>
+        <div class="project3">
+            <h3>2014-2016 La norteña Grill, Suc. Galerias, Altabrisa y sendero.
             </h3>
+            <img src="../../images/diego-vidal/diego-en-la-norteña-grill.jpg" alt="">
+            <img src="../../images/diego-vidal/la-norteña-grill.jpg" alt="">
             <p>
                 <strong>Cajero Vendedor</strong>
                 Realize labores de venta en mostrador,
@@ -180,31 +189,41 @@
                 Verificacion de pedidos a provedor,
                 Tel. Suc Sendero 357 2868
             </p>
-            <h3>
-                2011-2015 COBATAB plantel 24
+            <a href="#" target="_blank">
+                ¡Te cuento mas aqui!
+            </a>
+        </div>
+        <div class="project4"><h3>2011-2015 COBATAB plantel 24</h3>
+            <img src="../../images/diego-vidal/diego-en-la-preparatoria.jpeg" alt="">
+                <p>
+                    Estudie en el Colegio de Bachilleres
+                    de el estado de Tabasco Plantel 25,
+                    Mi principal virtud fue el trabajo en
+                    equipo.
+                    puedes conocer el
+                    <a href="http://cobatab.edu.mx/index.html" target="_blank">
+                        COBATAB</a> aqui.
+                </p>
+                <a href="#" target="_blank">
+                    ¡Te cuento mas aqui!</a>
+        </div>
+        <div class="project5">
+            <h3>2010-2011 Ensamble y Manetenimiento de PC - Compuline Parrilla, Tab, Mex.
             </h3>
-            <p>
-                Estudie en el Colegio de Bachilleres
-                de el estado de Tabasco Plantel 25,
-                Mi principal virtud fue el trabajo en
-                equipo.
-                puedes conocer el
-                <a href="http://cobatab.edu.mx/index.html" target="_blank">
-                    COBATAB</a> aqui.
-            </p>
-            <h3>
-                2010-2011 Ensamble y Manetenimiento
-                de PC - Compuline Parrilla, Tab, Mex.
-            </h3>
+            <p>¡Tu proyecto!</p>
             <p>
                 Tome un curso que me permitio conocer las
                 partes fundamentales de un equipo de computo
                 y como mantere su correcto funcionamiento.
             </p>
+        </div>
+        <div class="project6">
             <h3>
-                2008-2010 Curso Operacion de Equipo de computo
-                PC Windows
+                2008-2010 Curso Operacion de Equipo de computo PC Windows
             </h3>
+            <p>
+                ¡tu proyecto!
+            </p>
             <p>
                 Tome curso con duracion de 2 años
                 que me permitio el uso de herramientas
@@ -212,38 +231,6 @@
                 las bases para usar un ordenador.
                 Adquiri conocimientos basicos en Office,
                 Windows, CorelDrawn, AutoCAd entre otros.
-            </p>
-        </div>
-        <div id="trajectory" class="projects-title">
-            <h2>
-                Aqui hay algunos de mis proyectos:
-            </h2>
-        </div>
-        <div class="project1">¡Hola Soy Diego Vidal!
-            <img src="../../images/portfolio-dvl/portfoliodvl.png" alt="picture of Diego Portfolio">
-            <a href="diegolab/rwd-projects/5-personal-portfolio.html">Mi Pagina Web Personal</a>
-        </div>
-        <div class="project2">Original Trombones
-            <img src="../../images/portfolio-dvl/landing-page.png">
-            <a href="product-landing-page/index.html" target="_blank">Revisa esta landing page</a>
-        </div>
-        <div class="project3">JS Documentation
-            <img src="../../images/portfolio-dvl/technical-page.png" alt="">
-            <a href="diegolab/rwd-projects/4-technical-Documentation-page.html" target="_blank">
-                Tambien realize una pagina de documentacion Tecnica
-            </a>
-        </div>
-        <div class="project4">Dr. Norman Borleaug
-            <img src="../../images/portfolio-dvl/Tribute-page.png" alt="">
-            <a href="diegolab/rwd-projects/1-tribute-page.html" target="_blank">
-                Mi primera pagina trituto</a>
-        </div>
-        <div class="project5">Proyecto 5
-            <p>¡Tu proyecto!</p>
-        </div>
-        <div class="project6">Proyecto 6
-            <p>
-                ¡tu proyecto!
             </p>
         </div>
         <div class="btn">
