We add all pictures and desciptions to any section about my work trajectory into cv diego page, this is the first final version of my new redesign cv

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -210,20 +210,20 @@
         <div class="project5">
             <h3>2010-2011 Ensamble y Manetenimiento de PC - Compuline Parrilla, Tab, Mex.
             </h3>
-            <p>¡Tu proyecto!</p>
+            <img src="../../images/diego-vidal/compuline-2010-2011.png" alt="">
             <p>
                 Tome un curso que me permitio conocer las
                 partes fundamentales de un equipo de computo
                 y como mantere su correcto funcionamiento.
             </p>
+            <a href="#" target="_blank">
+                ¡Te cuento mas aqui!</a>
         </div>
         <div class="project6">
             <h3>
                 2008-2010 Curso Operacion de Equipo de computo PC Windows
             </h3>
-            <p>
-                ¡tu proyecto!
-            </p>
+            <img src="../../images/diego-vidal/calificaciones-2008-2010.png" alt="">
             <p>
                 Tome curso con duracion de 2 años
                 que me permitio el uso de herramientas
@@ -232,6 +232,8 @@
                 Adquiri conocimientos basicos en Office,
                 Windows, CorelDrawn, AutoCAd entre otros.
             </p>
+            <a href="#" target="_blank">
+                ¡Te cuento mas aqui!</a>
         </div>
         <div class="btn">
             <button>Show all</button>
