Test to see if the html was succesfully updated on the web

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -51,7 +51,7 @@
                     ¡Siempre mejorando!
                 </h2>
                 <p>
-                    ¿Quieres cubrir tu vacante?
+                    ¿Quieres cubrir tu vacante??
                 </p>
                 <p id="cellphone">
                     +52 993 432 0592
@@ -123,8 +123,7 @@
         <div id="mi-perfil" class="profile">
             <h2>Algo mas sobre mi:</h2>
             <p id="more-about-me">
-                Mi trayectoria me ha permitido participar en el
-                sector alimentos, y ventas retail como promotor,
+                Eh recorrido como vendedor el sector de comida rapida, y ventas retail como promotor,
                 me encanta siempre estar aprendiendo y me satisface
                 mucho el lograr objetivos. Como persona tiendo a ser paciente
                 calmado y equilibrado. Suelo aceptar sin irritarme la mayoria
@@ -145,6 +144,48 @@
             <h2>
                 Acontinuacion puedes ver mi trayectoria:
             </h2>
+        </div>
+        <div class="project9">
+            <h3>2018-2020 Asesoria En Vanguardia Y Diseño MCB del Norte.</h3>
+            <img src="../../images/diego-vidal/diego-vidal-givenchy.jpg" alt="picture of Diego Portfolio">
+            <p>
+                Desempeño funciones de Promotor-Demostrador
+                para la marca GIVENCHY en una de las
+                sucursales de la cadena LIVERPOOL.
+                Mi atencion a a los clientes
+                y mi atencion a la marca me han permitido
+                desempeñar mi trabajo con compromiso y
+                responsabilidad!
+            </p>
+            <a href="diegolab/rwd-projects/5-personal-portfolio.html">¡Te cuento mas aqui!</a>
+        </div>
+        <div class="project8">
+            <h3>2018-2020 Asesoria En Vanguardia Y Diseño MCB del Norte.</h3>
+            <img src="../../images/diego-vidal/diego-vidal-givenchy.jpg" alt="picture of Diego Portfolio">
+            <p>
+                Desempeño funciones de Promotor-Demostrador
+                para la marca GIVENCHY en una de las
+                sucursales de la cadena LIVERPOOL.
+                Mi atencion a a los clientes
+                y mi atencion a la marca me han permitido
+                desempeñar mi trabajo con compromiso y
+                responsabilidad!
+            </p>
+            <a href="diegolab/rwd-projects/5-personal-portfolio.html">¡Te cuento mas aqui!</a>
+        </div>
+        <div class="project7">
+            <h3>2018-2020 Asesoria En Vanguardia Y Diseño MCB del Norte.</h3>
+            <img src="../../images/diego-vidal/diego-vidal-givenchy.jpg" alt="picture of Diego Portfolio">
+            <p>
+                Desempeño funciones de Promotor-Demostrador
+                para la marca GIVENCHY en una de las
+                sucursales de la cadena LIVERPOOL.
+                Mi atencion a a los clientes
+                y mi atencion a la marca me han permitido
+                desempeñar mi trabajo con compromiso y
+                responsabilidad!
+            </p>
+            <a href="diegolab/rwd-projects/5-personal-portfolio.html">¡Te cuento mas aqui!</a>
         </div>
         <div class="project1">
             <h3>2018-2020 Asesoria En Vanguardia Y Diseño MCB del Norte.</h3>
