--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -51,7 +51,7 @@
                     ¡Siempre mejorando!
                 </h2>
                 <p>
-                    ¿Quieres cubrir tu vacante??
+                    ¿Quieres cubrir tu vacante?????
                 </p>
                 <p id="cellphone">
                     +52 993 432 0592
