Renamed index2 to ignore that file since is just an example file that shoul not impact on the main website or the main index

--- a/ExamplesOfHTMLCode.html
+++ b/ExamplesOfHTMLCode.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="html-properties">
+  <!--This is Fo examples of What you could do, Do not Use This-->
     <head>
       <title>
         ¿Deseas tener tu propia pagina web?
