Added Favorite Icon to Meta Data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diego Vidal Tu desarrollador!</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="./favicon.jpeg" type="image/x-icon" >
 </head>
 
 <body>
