Added basic UI to Rock, Papes Scicssor GAme

--- a/rock-paper-scisor/index.html
+++ b/rock-paper-scisor/index.html
@@ -12,5 +12,13 @@
     <label><input id="rock" type="button" value="Rock"></label>
     <label><input id="paper" type="button" value="Paper"></label>
     <label><input id="scissors" type="button" value="Scissors"></label>
+    <div id="results">
+        <h2>Result of each Game below:</h2>
+        <div id="round1"></div>
+        <div id="round2"></div>
+        <div id="round3"></div>
+        <div id="round4"></div>
+        <div id="round5"></div>
+    </div>
 </body>
 </html>
