Added Rock Paper scisor to portfolio an added mini picture

--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
             <a href="diegolab/rwd-projects/1-tribute-page.html" target="_blank">
             Mi primera pagina trituto</a>
         </div>
-        <div class="project5">Proyecto 5
-            <p>¡Tu proyecto!</p>
+        <div class="project5">
+            <p>Rock-Paper-Scissor Game</p>
+            <img src="./images/rock-paper-scissors-signo-mano-juego_9638-59.avif" alt="image of game rock paper scissor" width="40%">
+            <a href="./rock-paper-scisor/index.html" target="_blank"><p>Rock-Paper-Scissor Game!</p></a>
         </div>
         <div class="project6">Proyecto 6
             <p>
