Adde link a picture for new project on the landing page

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             <img src="./images/rock-paper-scissors-signo-mano-juego_9638-59.avif" alt="image of game rock paper scissor" width="40%">
             <a href="./rock-paper-scisor/index.html" target="_blank"><p>Rock-Paper-Scissor Game!</p></a>
         </div>
-        <div class="project6">Proyecto 6
-            <p>
-                ¡tu proyecto!
-            </p>
+        <div class="project6">
+            <p>Etch-A-Sketch</p>
+            <img src="./images/etch-sktch.jpg" alt="Etch-A-Sketch picture" width="40%">
+            <a href="https://diegogagan2587.github.io/Etch-A-Sketch/" target="_blank" ><p>Etch-A-Sketch!</p></a>
         </div>
         <div class="btn">
             <button>Show all</button>
