set padding for header background, set the background on the css file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--Start Welcome section-->
     <header>
         <div id="aboutme" class="welcome-section">
-        <img src="images/Soy Diego.jpg" alt="diego vidal's picture">
+        <!-- <img src="images/Soy Diego.jpg" alt="diego vidal's picture"> -->
             <div class="aboutme">
                 <h1>
                     ¡Hola! Soy Diego Vidal
