removes unecesary css code for projects containers

--- a/index.html
+++ b/index.html
@@ -68,32 +68,32 @@
                 Aqui hay algunos de mis proyectos:
             </h2>
         </div>
-        <div class="project1">¡Hola Soy Diego Vidal!
+        <div class="project1 project-container">¡Hola Soy Diego Vidal!
             <img src="images/portfolio-dvl/portfoliodvl.png" 
             alt="picture of Diego Portfolio">
             <a href="diegolab/rwd-projects/5-personal-portfolio.html">Mi Pagina Web Personal</a>
         </div>
-        <div class="project2">Original Trombones
+        <div class="project2 project-container">Original Trombones
             <img src="images/portfolio-dvl/landing-page.png">
             <a href="product-landing-page/index.html" target="_blank">Revisa esta landing page</a>
         </div>
-        <div class="project3">JS Documentation
+        <div class="project3 project-container">JS Documentation
             <img src="images/portfolio-dvl/technical-page.png" alt="">
             <a href="diegolab/rwd-projects/4-technical-Documentation-page.html" target="_blank">
             Tambien realize una pagina de documentacion Tecnica
             </a>
         </div>
-        <div class="project4">Dr. Norman Borleaug
+        <div class="project4 project-container">Dr. Norman Borleaug
             <img src="images/portfolio-dvl/Tribute-page.png" alt="">
             <a href="diegolab/rwd-projects/1-tribute-page.html" target="_blank">
             Mi primera pagina trituto</a>
         </div>
-        <div class="project5">
+        <div class="project5 project-container">
             <p>Rock-Paper-Scissor Game</p>
             <img src="./images/rock-paper-scissors-signo-mano-juego_9638-59.avif" alt="image of game rock paper scissor" width="40%">
             <a href="./rock-paper-scisor/index.html" target="_blank"><p>Rock-Paper-Scissor Game!</p></a>
         </div>
-        <div class="project6">
+        <div class="project6 project-container">
             <p>Etch-A-Sketch</p>
             <img src="./images/etch-sktch.jpg" alt="Etch-A-Sketch picture" width="40%">
             <a href="https://diegogagan2587.github.io/Etch-A-Sketch/" target="_blank" ><p>Etch-A-Sketch!</p></a>
